--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@
     --citeColor: rgb(184, 178, 178);
     --fontHoverColor: rgb(146, 145, 145);
     --backgroundColor: rgba(39, 20, 20, 0.97);
-    --headerColor: rgba(37, 15, 15, 0.7);
+    --headerColor: rgba(37, 15, 15, 0.8);
     --logoColor: rgba(255, 255, 255, 0.7);
 }
 
@@ -13,7 +13,10 @@
 }
 
 * {
-    font-family: "Julius Sans One", sans-serif !important;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
 }
 
 html {
@@ -25,13 +28,100 @@ body {
     margin: 0px;
 }
 
-img {
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    -moz-user-drag: none;
-    -o-user-drag: none;
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+img,
+span,
+button,
+.btn-1,
+.btn-2 {
+    text-decoration: none;
+    user-select: none;
 }
 /* GLOBAL END */
+
+/* FONTS START */
+* {
+    font-family: "Julius Sans One", sans-serif !important;
+}
+
+.btn-1,
+.btn-2,
+.book-card .text,
+.books-content p,
+.card-header .date,
+.card-header .date span {
+    font-family: "Raleway", sans-serif !important;
+}
+/* FONTS END */
+
+/* BUTTONS START */
+/* BUTTON ONE */
+.btn-1 {
+    text-align: center;
+    display: inline-block;
+    padding: 15px 40px;
+    border: 1px solid var(--fontHoverColor);
+    cursor: pointer;
+    letter-spacing: 1px;
+    position: relative;
+    overflow: hidden;
+    color: var(--fontColor);
+}
+
+.btn-1:before {
+    content: "";
+    position: absolute;
+    height: 150px;
+    width: 50px;
+    background: #fff;
+    left: -55px;
+    top: -40px;
+    transform: rotate(37deg);
+    transition: all 0.4s;
+    opacity: 0.3;
+}
+
+.btn-1:hover:before {
+    left: 95%;
+}
+
+/* BUTTON TWO */
+.btn-2 {
+    text-align: center;
+    display: inline-block;
+    padding: 15px 40px;
+    border: 1px solid var(--fontHoverColor);
+    letter-spacing: 1px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    color: var(--fontColor);
+}
+
+.btn-2:before {
+    content: "";
+    position: absolute;
+    height: 150px;
+    width: 50px;
+    background: #fff;
+    right: -40px;
+    top: -40px;
+    transform: rotate(37deg);
+    transition: all 0.4s;
+    opacity: 0.3;
+}
+
+.btn-2:hover:before {
+    right: 105%;
+}
+/* BUTTONS END */
 
 /* LOADER START */
 .loader-container {
@@ -371,11 +461,171 @@ img {
     height: 100vh;
     position: relative;
     background-color: transparent;
-    z-index: 200;
+    z-index: 20;
 }
 
+.books-section .books-background {
+    width: 100%;
+    opacity: 0.65;
+}
+
+.books-section .books-content {
+    position: absolute;
+    float: left;
+    left: 40px;
+    top: 350px;
+    width: 300px;
+}
+
+.books-content h1 {
+    color: var(--fontColor);
+    text-align: center;
+    font-weight: bold;
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.books-content h3 {
+    color: var(--fontColor);
+    text-align: center;
+    padding: 12px 0px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    font-weight: 100;
+    font-size: 14px;
+}
+
+.books-content p {
+    margin-top: 25px;
+    text-align: center;
+    color: var(--fontHoverColor);
+}
+
+.books-content .btn-1 {
+    margin: 10px 0 0 60px;
+    padding: 12px 28px;
+}
+
+.books-section .books-cards .book-card {
+    float: right;
+    margin-right: 25px;
+}
+
+.books-cards .book-card:nth-child(even) {
+    margin-top: 50px;
+}
+
+.book-card .card-wrapper {
+    min-height: 340px;
+    width: 260px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+}
+
+.book-card .card-wrapper:hover .card-data {
+    transform: translateY(0);
+}
+
+.book-card img {
+    position: absolute;
+    width: 260px;
+    height: 340px;
+}
+
+.book-card .card-header {
+    color: var(--fontColor);
+    padding: 1em;
+}
+
+.card-header .menu-content {
+    margin: 0;
+    padding: 0;
+    float: right;
+    list-style-type: none;
+}
+
+.card-header .menu-content li {
+    margin: 0 3px;
+    position: relative;
+    display: inline-block;
+}
+
+.card-header .menu-content .menu-icon {
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.card-header .date {
+    float: left;
+    font-size: 12px;
+    position: relative;
+}
+
+.card-header .date span {
+    margin: 0 2px;
+}
+
+.book-card .card-data {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transform: translateY(calc(120px + 1em));
+    transition: transform 0.5s;
+}
+
+.book-card .card-data .content {
+    padding: 1em;
+    position: relative;
+}
+
+.card-data .content .author {
+    font-size: 14px;
+    color: var(--fontColor);
+}
+
+.card-data .content .title {
+    margin-top: 10px;
+    font-weight: 500;
+    color: var(--fontColor);
+}
+
+.card-data .content .text {
+    margin: 0;
+    height: 70px;
+    font-size: 15px;
+    color: var(--fontHoverColor);
+}
+
+.book-card .read-more-btn {
+    display: block;
+    width: 100px;
+    margin: 2em auto 1em;
+    text-align: center;
+    font-size: 12px;
+    color: var(--fontColor);
+    line-height: 1;
+    position: relative;
+    font-weight: 600;
+}
+
+.book-card .read-more-btn::after {
+    content: "\2192";
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+    transition: all 0.3s;
+}
+
+.book-card .read-more-btn:hover::after {
+    transform: translate(5px, -50%);
+    opacity: 1;
+}
 /* BOOKS END */
 
+/* ANIMATIONS START */
 @keyframes loading-animation {
     0% {
         width: 0px;
@@ -419,5 +669,4 @@ img {
         transform: translateY(-15px);
     }
 }
-
-/* TEMP */
+/* ANIMATIONS END */
