--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -458,10 +458,19 @@ button,
 
 /* BOOKS START */
 .books-section {
-    height: 100vh;
+    height: 110vh;
     position: relative;
     background-color: transparent;
     z-index: 20;
+}
+
+.books-section .book-h1 {
+    position: relative;
+    top: -50px;
+    margin-top: 30px;
+    text-align: center;
+    color: var(--fontColor);
+    font-weight: 100;
 }
 
 .books-section .books-background {
@@ -473,7 +482,7 @@ button,
     position: absolute;
     float: left;
     left: 40px;
-    top: 350px;
+    top: 405px;
     width: 300px;
 }
 
@@ -481,8 +490,9 @@ button,
     color: var(--fontColor);
     text-align: center;
     font-weight: bold;
-    font-size: 28px;
+    font-size: 30px;
     margin-bottom: 10px;
+    font-weight: 100;
 }
 
 .books-content h3 {
@@ -496,8 +506,9 @@ button,
 }
 
 .books-content p {
-    margin-top: 25px;
+    margin-top: 20px;
     text-align: center;
+    line-height: 25px;
     color: var(--fontHoverColor);
 }
 
@@ -507,8 +518,10 @@ button,
 }
 
 .books-section .books-cards .book-card {
+    position: relative;
     float: right;
     margin-right: 25px;
+    top: -20px;
 }
 
 .books-cards .book-card:nth-child(even) {
@@ -516,7 +529,7 @@ button,
 }
 
 .book-card .card-wrapper {
-    min-height: 340px;
+    min-height: 350px;
     width: 260px;
     position: relative;
     overflow: hidden;
@@ -530,7 +543,7 @@ button,
 .book-card img {
     position: absolute;
     width: 260px;
-    height: 340px;
+    height: 350px;
 }
 
 .book-card .card-header {
@@ -554,6 +567,12 @@ button,
 .card-header .menu-content .menu-icon {
     font-size: 18px;
     cursor: pointer;
+    outline: none;
+}
+
+.card-header .menu-content .menu-icon:hover {
+    color: var(--fontHoverColor);   
+    transition: .6s all;
 }
 
 .card-header .date {
