--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -59,7 +59,8 @@ button,
 .books-content p,
 .card-header .date,
 .card-header .date span,
-.tutorial-document .reading-rule p {
+.tutorial-document .reading-rule p,
+.service-card figcaption p {
     font-family: "Raleway", sans-serif !important;
 }
 /* FONTS END */
@@ -535,7 +536,7 @@ button,
 .tutorial-section .full-tutorial {
     position: relative;
     display: flex;
-    top: 430px;
+    top: 450px;
     left: 30%;
     text-align: center;
 }
@@ -787,6 +788,199 @@ button,
     background: #dc143c;
 }
 /* READING END */
+
+/* SERVICES START */
+.services-section {
+    height: 53vh;
+}
+
+.services-section .services-wrapper {
+    background-image: url("https://images.pexels.com/photos/2908984/pexels-photo-2908984.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    z-index: 100;
+    height: 50vh;
+}
+
+.services-wrapper .title h1 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 35px;
+    letter-spacing: 1px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 16px 0;
+    grid-gap: 22px;
+    color: rgb(255, 255, 255);
+    padding-top: 10px;
+    background-color: black;
+}
+
+.services-wrapper .title h1:after,
+.services-wrapper .title h1:before,
+.services-wrapper .title span:after {
+    content: " ";
+    display: block;
+    width: 100%;
+    border-bottom: 2px solid #ccc;
+    background-color: #000000;
+}
+
+.services-section hr {
+    color: var(--fontColor);
+    background-color: var(--fontColor);
+}
+
+.services-wrapper .services {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.services .service-card {
+    position: relative;
+    margin: 20px;
+    min-width: 310px -60px;
+    max-width: 310px;
+    width: 100%;
+    color: #ffffff;
+    text-align: left;
+    background-color: #000000;
+    font-size: 16px;
+}
+
+.service-card * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+}
+
+.service-card img {
+    position: relative;
+    max-width: 100%;
+    vertical-align: top;
+}
+
+.service-card figcaption {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    padding: 20px 30px;
+}
+
+.service-card figcaption:before,
+.service-card figcaption:after {
+    width: 1px;
+    height: 0;
+}
+
+.service-card figcaption:before {
+    right: 0;
+    top: 0;
+}
+
+.service-card figcaption:after {
+    left: 0;
+    bottom: 0;
+}
+
+.service-card h3,
+.service-card p {
+    line-height: 1.5em;
+}
+
+.service-card h3 {
+    margin: 0 0 5px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.service-card p {
+    font-size: 0.8em;
+    font-weight: 500;
+    margin: 0 0 15px;
+}
+
+.service-card a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.service-card:before,
+.service-card:after,
+.service-card figcaption:before,
+.service-card figcaption:after {
+    position: absolute;
+    content: "";
+    background-color: #ffffff;
+    z-index: 1;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    opacity: 0.8;
+}
+
+.service-card:before,
+.service-card:after {
+    height: 1px;
+    width: 0%;
+}
+
+.service-card:before {
+    top: 0;
+    left: 0;
+}
+
+.service-card:after {
+    bottom: 0;
+    right: 0;
+}
+.service-card:hover img,
+.service-card.hover img {
+    opacity: 0.4;
+}
+
+.service-card:hover figcaption,
+.service-card.hover figcaption {
+    opacity: 1;
+}
+
+.service-card:hover figcaption:before,
+.service-card.hover figcaption:before,
+.service-card:hover figcaption:after,
+.service-card.hover figcaption:after {
+    height: 100%;
+}
+
+.service-card:hover:before,
+.service-card.hover:before,
+.service-card:hover:after,
+.service-card.hover:after {
+    width: 100%;
+}
+
+.service-card:hover:before,
+.service-card.hover:before,
+.service-card:hover:after,
+.service-card.hover:after,
+.service-card:hover figcaption:before,
+.service-card.hover figcaption:before,
+.service-card:hover figcaption:after,
+.service-card.hover figcaption:after {
+    opacity: 0.1;
+}
+/* SERVICES END */
 
 /* BOOKS START */
 .books-section {
