--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,13 @@
 /* GLOBAL START */
 :root {
     --fontColor: #ffffff;
-    --fontSecondColor: #acacac;
-    --citeColor: rgb(184, 178, 178);
+    --fontSecondColor: #cfcfcf;
+    --citeColor: rgb(170, 170, 170);
     --fontHoverColor: rgb(146, 145, 145);
     --backgroundColor: rgba(39, 20, 20, 0.97);
     --headerColor: rgba(37, 15, 15, 0.8);
     --logoColor: rgba(255, 255, 255, 0.7);
+    --borderColor: #7a571f;
 }
 
 ::-webkit-scrollbar {
@@ -54,76 +55,92 @@ button,
 }
 
 .btn-1,
-.btn-2,
 .book-card .text,
 .books-content p,
 .card-header .date,
 .card-header .date span,
 .tutorial-document .reading-rule p,
-.service-card figcaption p {
+.service-card figcaption p,
+.author-card p {
     font-family: "Raleway", sans-serif !important;
 }
 /* FONTS END */
 
-/* BUTTONS START */
-/* BUTTON ONE */
-.btn-1 {
-    text-align: center;
-    display: inline-block;
-    padding: 15px 40px;
-    border: 1px solid var(--fontHoverColor);
-    cursor: pointer;
-    letter-spacing: 1px;
-    position: relative;
-    overflow: hidden;
+/* HEADER START */
+.header-wrapper {
+    display: block;
+    margin: 0 auto 50px auto;
+    width: 40%;
+}
+
+.header-wrapper h1 {
     color: var(--fontColor);
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    margin-bottom: 10px;
+    font-weight: 100;
+}
+
+.header-wrapper h3 {
+    color: var(--fontSecondColor);
+    text-align: center;
+    padding: 12px 0px;
+    border-top: 1px solid var(--borderColor);
+    border-bottom: 1px solid var(--borderColor);
+    font-weight: 100;
+    font-size: 16px;
+}
+
+/* HEADER END */
+
+/* BUTTONS START */
+.button-wrapper {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.button-wrapper .btn-1 {
+    position: relative;
+    display: inline-block;
+    text-transform: uppercase;
+    color: var(--fontColor);
+    text-decoration: none;
+    background-color: var(--backgroundColor);
+    height: 60px;
+    line-height: 60px;
+    width: 250px;
+    z-index: 2;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 0.4s ease;
+    overflow: hidden;
+    border: 1px solid var(--borderColor);
 }
 
 .btn-1:before {
-    content: "";
     position: absolute;
-    height: 150px;
-    width: 50px;
-    background: #fff;
-    left: -55px;
-    top: -40px;
-    transform: rotate(37deg);
-    transition: all 0.4s;
-    opacity: 0.3;
+    content: "";
+    top: 50%;
+    left: 50%;
+    height: 0%;
+    width: 100%;
+    z-index: -1;
+    background-color: var(--backgroundColor);
+    transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    opacity: 0;
+    transition: all 0.4s ease;
 }
 
 .btn-1:hover:before {
-    left: 95%;
+    opacity: 1;
+    height: 250%;
 }
 
-/* BUTTON TWO */
-.btn-2 {
-    text-align: center;
-    display: inline-block;
-    padding: 15px 40px;
-    border: 1px solid var(--fontHoverColor);
-    letter-spacing: 1px;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    color: var(--fontColor);
-}
-
-.btn-2:before {
-    content: "";
-    position: absolute;
-    height: 150px;
-    width: 50px;
-    background: #fff;
-    right: -40px;
-    top: -40px;
-    transform: rotate(37deg);
-    transition: all 0.4s;
-    opacity: 0.3;
-}
-
-.btn-2:hover:before {
-    right: 105%;
+.btn-1:hover {
+    border-color: var(--borderColor);
+    background-color: transparent;
 }
 /* BUTTONS END */
 
@@ -509,6 +526,7 @@ button,
     font-size: 35px;
     color: var(--fontColor);
     z-index: 60;
+    cursor: pointer;
 }
 
 .tutorial-wrapper .tutorial-document {
@@ -794,8 +812,8 @@ button,
     height: 53vh;
 }
 
-.services-section .services-wrapper {
-    background-image: url("https://images.pexels.com/photos/2908984/pexels-photo-2908984.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+.services-section .services-background {
+    background-image: url("https://images.pexels.com/photos/694740/pexels-photo-694740.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -803,53 +821,47 @@ button,
     height: 50vh;
 }
 
-.services-wrapper .title h1 {
+.services-section .services-title h1 {
     text-align: center;
     text-transform: uppercase;
     font-size: 35px;
     letter-spacing: 1px;
-    font-family: "Raleway", sans-serif;
     font-weight: 300;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-template-rows: 16px 0;
     grid-gap: 22px;
-    color: rgb(255, 255, 255);
-    padding-top: 10px;
+    color: var(--fontColor);
     background-color: black;
 }
 
-.services-wrapper .title h1:after,
-.services-wrapper .title h1:before,
-.services-wrapper .title span:after {
+.services-title h1:after,
+.services-title h1:before,
+.services-title span:after {
     content: " ";
     display: block;
     width: 100%;
-    border-bottom: 2px solid #ccc;
+    border-bottom: 2px solid var(--borderColor);
     background-color: #000000;
 }
 
-.services-section hr {
-    color: var(--fontColor);
-    background-color: var(--fontColor);
-}
-
-.services-wrapper .services {
+.services-section .services-cards {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    padding-top: 20px;
 }
 
-.services .service-card {
+.services-cards .service-card {
     position: relative;
-    margin: 20px;
-    min-width: 310px -60px;
+    margin: 30px;
+    min-width: 310px;
     max-width: 310px;
     width: 100%;
-    color: #ffffff;
+    color: var(--fontColor);
     text-align: left;
     background-color: #000000;
     font-size: 16px;
+    border: 2px solid var(--borderColor);
 }
 
 .service-card * {
@@ -946,6 +958,7 @@ button,
     bottom: 0;
     right: 0;
 }
+
 .service-card:hover img,
 .service-card.hover img {
     opacity: 0.4;
@@ -980,68 +993,41 @@ button,
 .service-card.hover figcaption:after {
     opacity: 0.1;
 }
+
+.services-section hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid var(--borderColor);
+    margin-top: 10px;
+    padding: 0;
+}
 /* SERVICES END */
 
 /* BOOKS START */
 .books-section {
-    height: 110vh;
+    height: 135vh;
     position: relative;
     z-index: 20;
 }
 
 .books-section .books-background {
-    width: 100%;
-    opacity: 0.65;
-}
-
-.books-section .books-content {
-    position: absolute;
-    float: left;
-    left: 40px;
-    top: 405px;
-    width: 300px;
-}
-
-.books-content h1 {
-    color: var(--fontColor);
-    text-align: center;
-    font-weight: bold;
-    font-size: 30px;
-    margin-bottom: 10px;
-    font-weight: 100;
-}
-
-.books-content h3 {
-    color: var(--fontColor);
-    text-align: center;
-    padding: 12px 0px;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    font-weight: 100;
-    font-size: 14px;
-}
-
-.books-content p {
-    margin-top: 20px;
-    text-align: center;
-    line-height: 25px;
-    color: var(--fontHoverColor);
-}
-
-.books-content .btn-1 {
-    margin: 10px 0 0 60px;
-    padding: 12px 28px;
-}
-
-.books-section .books-cards .book-card {
+    background-image: url("../resources/background/books-background.png");
+    background-position: center;
+    background-size: cover;
     position: relative;
-    float: right;
-    margin-right: 25px;
-    top: -20px;
+    height: 45vh;
 }
 
-.books-cards .book-card:nth-child(even) {
-    margin-top: 50px;
+.books-section .books-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.books-cards .book-card {
+    margin: 0 40px 55px 0;
+    border: 1px solid var(--borderColor);
 }
 
 .book-card .card-wrapper {
@@ -1049,7 +1035,6 @@ button,
     width: 260px;
     position: relative;
     overflow: hidden;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
 }
 
 .book-card .card-wrapper:hover .card-data {
@@ -1160,6 +1145,84 @@ button,
 }
 /* BOOKS END */
 
+/* AUTHORS START */
+.authors-section {
+    height: 90vh;
+    position: relative;
+}
+
+.authors-section .authors-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 40px auto;
+}
+
+.authors-cards .author-card {
+    position: relative;
+    margin: 10px;
+    min-width: 230px;
+    max-width: 315px;
+    text-align: center;
+    line-height: 1.4em;
+    font-size: 14px;
+    box-shadow: none !important;
+    margin: 0 15px;
+}
+
+.authors-cards .author-card * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.author-card .profile-image {
+    display: inline-block;
+    width: 80%;
+    z-index: 1;
+    position: relative;
+    padding: 10px;
+    border: 2px solid var(--borderColor);
+}
+
+.author-card .profile-image img {
+    max-width: 100%;
+    vertical-align: top;
+}
+
+.author-card figcaption {
+    width: 100%;
+    background-color: var(--backgroundColor);
+    color: var(--fontColor);
+    padding: 125px 25px 25px;
+    margin-top: -100px;
+    display: inline-block;
+}
+
+.author-card h3,
+.author-card h4,
+.author-card p {
+    margin: 0 0 5px;
+}
+
+.author-card h3 {
+    font-weight: 600;
+    font-size: 1.3em;
+    font-family: "Playfair Display", Arial, sans-serif;
+}
+
+.author-card h4 {
+    color: var(--fontSecondColor);
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+
+.author-card p {
+    font-size: 0.9em;
+    letter-spacing: 1px;
+    opacity: 0.9;
+}
+/* AUTHORS END */
+
 /* ANIMATIONS START */
 @keyframes loading-animation {
     0% {
@@ -1232,3 +1295,17 @@ button,
     }
 }
 /* ANIMATIONS END */
+
+/* RESPONSIVE START */
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+/* RESPONSIVE END */
