--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,6 +17,8 @@
 }
 
 * {
+    text-decoration: none;
+    user-select: none;
     -webkit-user-drag: none;
     -khtml-user-drag: none;
     -moz-user-drag: none;
@@ -30,23 +32,6 @@ html {
 body {
     margin: 0;
     transition: 1s all;
-}
-
-a,
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-img,
-span,
-button,
-.btn-1,
-.btn-2 {
-    text-decoration: none;
-    user-select: none;
 }
 /* GLOBAL END */
 
@@ -533,11 +518,16 @@ button,
     opacity: 0.3;
 }
 
-.home-section .main-content {
+.home-section .home-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     position: absolute;
-    padding: 350px 0px;
-    top: 70px;
-    left: 300px;
+    width: 100%;
+    top: 450px;
+}
+
+.home-section .main-content {
     text-align: center;
     user-select: none;
     color: var(--fontColor);
@@ -571,9 +561,7 @@ button,
 }
 
 .main-content .ChevronDown-button {
-    position: absolute;
-    top: 400px;
-    left: 445px;
+    margin-top: 30px;
     font-size: 45px;
     cursor: pointer;
     color: var(--logoColor);
@@ -583,9 +571,10 @@ button,
 /* LEFT NAV START */
 .home-section .left-nav {
     position: absolute;
-    top: 380px;
+    top: -70px;
+    left: 0;
     transition: 0.5s all;
-    z-index: 10;
+    user-select: none;
 }
 
 .left-nav .social-container {
@@ -597,7 +586,7 @@ button,
 .social-container .social-btn {
     color: var(--fontColor);
     padding: 5px;
-    margin: 0 0 10px 0;
+    margin-bottom: 10px;
     transition: 1s all;
 }
 
@@ -614,13 +603,11 @@ button,
 
 /* RIGHT NAV START */
 .home-section .right-nav {
-    right: 20px;
-    top: 320px;
     position: absolute;
+    top: -115px;
+    right: 15px;
     transform: rotate(90deg);
-    z-index: 10;
     transition: 0.5s all;
-    user-select: none;
 }
 
 .right-nav .date-container {
@@ -793,7 +780,6 @@ button,
     text-align: center;
     top: 40px;
     left: 200px;
-
 }
 /* TUTORIAL END */
 
