--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -104,7 +104,7 @@ body {
 /* TITLE HEADING START */
 .title-heading-wrapper {
     display: block;
-    margin: 0 auto 50px auto;
+    margin: 0 auto;
     width: 40%;
     transition: 1s all;
 }
@@ -114,7 +114,7 @@ body {
     text-align: center;
     font-weight: bold;
     font-size: 40px;
-    margin-bottom: 10px;
+    margin: 0;
     font-weight: 100;
 }
 
@@ -294,7 +294,6 @@ body {
 .header-wrapper .logo-container {
     margin-top: -30px;
     cursor: pointer;
-
 }
 
 .header-toggle .logo-container {
@@ -1021,7 +1020,7 @@ body {
     grid-template-rows: 16px 0;
     grid-gap: 22px;
     color: var(--fontColor);
-    background-color: var(--blackBackground);
+    background-color: var(--backgroundColor);
 }
 
 .services-title h1:after,
@@ -1031,7 +1030,7 @@ body {
     display: block;
     width: 100%;
     border-bottom: 2px solid var(--borderColor);
-    background-color: var(--blackBackground);
+    background-color: var(--backgroundColor);
 }
 
 .services-section .services-cards {
@@ -1195,7 +1194,7 @@ body {
 
 /* BOOKS START */
 .books-section {
-    height: 140vh;
+    height: 145vh;
     position: relative;
     background-color: var(--backgroundColor);
     transition: 1s all;
@@ -1214,6 +1213,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 50px 0 20px auto;
 }
 
 .books-cards .book-card {
@@ -1338,7 +1338,7 @@ body {
 
 /* AUTHORS START */
 .authors-section {
-    height: 90vh;
+    height: 95vh;
     position: relative;
     background-color: var(--backgroundColor);
     transition: 1s all;
@@ -1357,7 +1357,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 40px auto;
+    margin: 50px auto;
 }
 
 .authors-cards .author-card {
